started to work on bookkeeping

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -7,6 +7,8 @@
 
 <div><%= link_to 'Manage Transactions', transactions_path %></div>
 
+<div><%= link_to 'Manage Records', records_path %></div>
+
 </br>
 <div>
   <%= form_tag(controller: "actions", action: "broadcast_message", method: "post",:honeypot => true ) do %>
