have some basic caluclating of records related to a user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
   <%= nav_bar :brand => "NumBeers", :brand_link => root_path, :responsive => true do %>
     <%= menu_group do %>
       <%= menu_item "Stats", stats_path %>
+  
+      <% if user_signed_in? or admin? %>
+        <%= menu_item "Account", account_path %>
+      <% end %>
 
       <% if admin? %>
         <%= menu_item "Dashboard", dashboard_path %>
