--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,10 @@
+<h3>Profile Information</h3>
+<p> Below is your unique NumBeer-ID. Be sure to remember it, as you will need it when pouring a beer from the keg.</p>
+
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put}) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><h3><b>NumBeer-ID : <%= @contact.numbeer_id %></b></h3></div>
+  <h3><b>NumBeer-ID : <%= @contact.numbeer_id %></b></h3>
 
   </br>
 
@@ -40,7 +43,7 @@
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i></br>
   <%= f.password_field :current_password %></div>
 
-  <div><%= f.submit "Update" %></div>
+  <div><%= f.submit "Update", :class => "btn btn-primary btn-large"%></div>
 <% end %>
 <hr>
 <h4>Cancel My Account: </h4>
