--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -11,6 +11,12 @@
       <%= f.text_field :amount, :class => 'text_field' %>
     </div>
   </div>
+  <div class="control-group">
+    <%= f.label :description, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :description, :class => 'text_area' %>
+    </div>
+  </div>
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
