--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -8,6 +8,8 @@
   <dd><%= @record.contact.full_name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:amount) %>:</strong></dt>
   <dd><%= @record.amount %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
+  <dd><%= @record.description %></dd>
 </dl>
 
 <div class="form-actions">
