moved records to admin namespace

--- a/app/views/admin/records/_form.html.erb
+++ b/app/views/admin/records/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @record, :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for [:admin, @record], :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
     <%= f.label :contact_id, :class => 'control-label' %>
     <div class="controls">
@@ -21,6 +21,6 @@
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                records_path, :class => 'btn' %>
+                admin_records_path, :class => 'btn' %>
   </div>
 <% end %>
