--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -7,7 +7,7 @@
 
 <div><%= link_to 'Manage Transactions', admin_transactions_path %></div>
 
-<div><%= link_to 'Manage Records', records_path %></div>
+<div><%= link_to 'Manage Records', admin_records_path %></div>
 
 </br>
 <div>
