--- a/app/views/admin/records/index.html.erb
+++ b/app/views/admin/records/index.html.erb
@@ -16,16 +16,16 @@
   <tbody>
     <% @records.each do |record| %>
       <tr>
-        <td><%= link_to record.id, record_path(record) %></td>
+        <td><%= link_to record.id, admin_record_path(record) %></td>
         <td><%= record.contact.full_name %></td>
         <td><%= record.description %></td>
         <td style="text-align:right"><%= number_to_currency(record.amount) %></td>
         <td><%=l record.created_at, format: :YMD_Time %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_record_path(record), :class => 'btn btn-mini' %>
+                      edit_admin_record_path(record), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      record_path(record),
+                      admin_record_path(record),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -36,5 +36,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_record_path,
+  new_admin_record_path,
             :class => 'btn btn-primary' %>
