--- a/app/views/admin/records/show.html.erb
+++ b/app/views/admin/records/show.html.erb
@@ -14,11 +14,11 @@
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              records_path, :class => 'btn'  %>
+              admin_records_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_record_path(@record), :class => 'btn' %>
+              edit_admin_record_path(@record), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              record_path(@record),
+              admin_record_path(@record),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
