--- a/app/views/admin/kegs/index.html.erb
+++ b/app/views/admin/kegs/index.html.erb
@@ -24,7 +24,7 @@
         <td><%= keg.start_date %></td>
         <td><%= keg.end_date %></td>
         <td><%= keg.beer.name %></td>
-        <td><%=l keg.created_at %></td>
+        <td><%=l keg.created_at, format: :YMD_Day %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_admin_keg_path(keg), :class => 'btn btn-mini' %>
@@ -33,6 +33,7 @@
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
+          <%= link_to t('.bill', ) %>
         </td>
       </tr>
     <% end %>
