--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -1,7 +1,7 @@
 <%- model_class = Record -%>
   <div id="account_info" class="span6 offset3">
     <div>
-      <h3>Balance: <%= number_to_currency(@balance) %></h3>
+      <h3>Balance Owing : <%= number_to_currency(@balance) %></h3>
     </div>
     <div id="records_list">
     <table class="table table-striped">
