--- a/app/views/admin/kegs/index.html.erb
+++ b/app/views/admin/kegs/index.html.erb
@@ -34,9 +34,9 @@
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
-          <%= link_to t('.bill'),
+          <%= link_to t('.bill', :default => t("links.bill")),
                       charge_admin_keg_path(keg),
-                      :method => :get,
+                      :method => :post,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Bill each user?'))},
                       :class => 'btn btn-mini btn-primary' %>
         </td>
