moved beers to admin namespace, balanced owed on records, all new buttons at the top of index page

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,7 +1,7 @@
 
-<h3>Welcome NumBeer Admin! Do what you need to do.</h3>
+<h3>Welcome NumBeer Admin!</h3>
 
-<div><%= link_to 'Manage Beers', beers_path %></div>
+<div><%= link_to 'Manage Beers', admin_beers_path %></div>
 
 <div><%= link_to 'Manage Kegs', admin_kegs_path %></div>
 
