--- a/app/views/admin/beers/_form.html.erb
+++ b/app/views/admin/beers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @beer, :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for [:admin, @beer], :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
     <%= f.label :brewer, :class => 'control-label' %>
     <div class="controls">
@@ -27,6 +27,6 @@
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                beers_path, :class => 'btn' %>
+              admin_beers_path, :class => 'btn' %>
   </div>
 <% end %>
