--- a/app/views/admin/beers/index.html.erb
+++ b/app/views/admin/beers/index.html.erb
@@ -1,6 +1,9 @@
 <%- model_class = Beer -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <%= link_to t('.new', :default => t("helpers.links.new")),
+            new_admin_beer_path,
+            :class => 'btn btn-primary' %>
 </div>
 <table class="table table-striped">
   <thead>
@@ -17,7 +20,7 @@
   <tbody>
     <% @beers.each do |beer| %>
       <tr>
-        <td><%= link_to beer.id, beer_path(beer) %></td>
+        <td><%= link_to beer.id, admin_beer_path(beer) %></td>
         <td><%= beer.brewer %></td>
         <td><%= beer.name %></td>
         <td><%= beer.style %></td>
@@ -25,9 +28,9 @@
         <td><%=l beer.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_beer_path(beer), :class => 'btn btn-mini' %>
+              edit_admin_beer_path(beer), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      beer_path(beer),
+              admin_beer_path(beer),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -36,7 +39,3 @@
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_beer_path,
-            :class => 'btn btn-primary' %>
