--- a/app/views/admin/beers/show.html.erb
+++ b/app/views/admin/beers/show.html.erb
@@ -16,11 +16,11 @@
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              beers_path, :class => 'btn'  %>
+              admin_beers_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_beer_path(@beer), :class => 'btn' %>
+              edit_admin_beer_path(@beer), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              beer_path(@beer),
+              admin_beer_path(@beer),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
