--- a/app/views/admin/records/index.html.erb
+++ b/app/views/admin/records/index.html.erb
@@ -1,7 +1,12 @@
 <%- model_class = Record -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h2>Balance Owed: <%= number_to_currency(Record.total_balance) %></h2>
+  <%= link_to t('.new', :default => t("helpers.links.new")),
+            new_admin_record_path,
+            :class => 'btn btn-primary' %>
 </div>
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -34,7 +39,3 @@
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-  new_admin_record_path,
-            :class => 'btn btn-primary' %>
