--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -16,7 +16,7 @@
   </div>
 
   <div class="span4 stat">
-    <h2>Last Pour was: </h2>
+    <h2>Last Pour</h2>
     <div class="stat_val">
       <%= last_pour %>
     </div>
@@ -37,7 +37,7 @@
   </div>
   
   <div class="span4 stat">
-    <h2>Cost per Pour : Current Keg</h2>
+    <h2>Estimated Cost / Pour : Current Keg</h2>
     <div class="stat_val">
       <%= number_to_currency(current_cost_per_pour(@keg)) %>
     </div>
