--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -43,6 +43,13 @@
     </div>
   </div>
   
+  <div class="span4 stat">
+    <h2>Most Pours in a Day (All)</h2>
+    <div class="stat_val">
+      <%= most_pours_in_a_day_all %>
+    </div>
+  </div>
+  
 </div>
 
 <% if user_signed_in? or admin? %>
