date displayed for most pours in a day

--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -44,7 +44,7 @@
   </div>
   
   <div class="span4 stat">
-    <h2>Most Pours in a Day (All)</h2>
+    <h2>Most Pours in a Day</h2>
     <div class="stat_val">
       <%= most_pours_in_a_day_all %>
     </div>
