--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -5,7 +5,7 @@
       <div class="pay_with_card pull-right">
         <%= form_tag charges_path do %>
           <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                  data-key="<%= Rails.configuration.stripe[:test_publishable_key] %>"
+                  data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
                   data-description="<%= number_to_currency(@balance) %> + $1.00 Fee"
                   data-amount="<%= @cc_amount %>">
           </script>
