--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -22,7 +22,7 @@
         </tr>
       </thead>
       <tbody>
-        <% @records.reverse_each do |record| %>
+        <% @records.each do |record| %>
           <tr>
             <td style="text-align:left"><%=l record.created_at, format: :YMD_Day %></td>
             <td style="text-align:left"><%= record.description %></td>
