--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -7,7 +7,8 @@
           <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                   data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
                   data-description="<%= number_to_currency(@balance) %> + $1.00 Fee"
-                  data-amount="<%= @cc_amount %>">
+                  data-amount="<%= @cc_amount %>"
+                  data-email="<%= current_user.email %>">
           </script>
         <% end %>
       </div>
