--- a/app/views/admin/contacts/_form.html.erb
+++ b/app/views/admin/contacts/_form.html.erb
@@ -26,6 +26,7 @@
   <div class="control-group">
     <%= f.label :happy_hour, :class => 'control-label' %>
     <div class="controls">
+      <%= hidden_field_tag 'contact[happy_hour]', '0' %>
       <%= check_box_tag "contact[happy_hour]", @contact.happy_hour, @contact.happy_hour %>
     </div>
   </div>
