--- a/app/views/admin/contacts/show.html.erb
+++ b/app/views/admin/contacts/show.html.erb
@@ -14,6 +14,8 @@
   <dd><%= @contact.phone_number %></dd>
   <dt><strong><%= model_class.human_attribute_name(:happy_hour) %>:</strong></dt>
   <dd><%= @contact.happy_hour %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:active) %>:</strong></dt>
+  <dd><%= @contact.active %></dd>
 </dl>
 
 <div class="form-actions">
