formatting of happy_hour message, and send balance_notice on billing of keg

--- a/app/views/user_mailer/happy_hour.html.erb
+++ b/app/views/user_mailer/happy_hour.html.erb
@@ -1,7 +1,8 @@
 <p>
   Just thought you should know that someone has decided it was 5 O'Clock somewhere and therefore has poured themselves a pint... Just saying, in case you wanted to join them.
-</br>
-  P.S. If you would like to stop receiving these emails, please update your subscription settings in your profile.
+<br/>
+<br/>
+  <em>P.S. If you would like to stop receiving these emails, please update your subscription settings in your profile.</em>
 </p>
 <p>
   <%= link_to "NumBeers", "#{root_url}" %>
