--- a/app/assets/stylesheets/pages.stats.css.scss
+++ b/app/assets/stylesheets/pages.stats.css.scss
@@ -16,7 +16,16 @@
     min-height: 60px;
   }
   
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px 5px;
+}
+
+.pie_stat{
+  h2 {
+    font-size: 18px;
+  }
+  .pie_stat_val{
+    
+  }
   
+  margin: 10px 5px;
 }
