stats verbiage tweak

--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -9,7 +9,7 @@
   <div class="span8">
 
     <div class="span4 stat">
-      <h2>Total Pours</h2>
+      <h2>Total Pours : Lifetime</h2>
       <div class="stat_val">
         <%= total_pours %>
       </div>
@@ -41,7 +41,7 @@
   <div class="span4">
     
     <div class="span4 pie_stat">
-      <h2>User Pours : Current Keg</h2>
+      <h2>User Pour Totals : Current Keg</h2>
       <div id="pours_by_user_keg" class="pie_stat_val">
       </div>
     </div>
