--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
       <%= link_to "About", about_path, class: "info-link" %>
       <%= link_to "Contact", contact_path, class: "info-link" %>
     </div>
-    <div class="cpyrght"> &copy; (2013-2014) NumBeers </div>
+    <div class="cpyrght"> &copy; (2013-<%= Time.now.year %>) NumBeers </div>
   </footer>
   
 </body>
