re-styled footer, and gauge text

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,12 +48,13 @@
     </section>
   </div>
   
-  <footer class="navbar-fixed-bottom">
+  <footer class="navbar-bottom">
     <div class="info">
+      <div>
       <%= link_to "About", about_path, class: "info-link" %>
       <%= link_to "Contact", contact_path, class: "info-link" %>
-    </div>
-    <div class="cpyrght"> &copy; (2013-<%= Time.now.year %>) NumBeers </div>
+      </div>
+      <div class="cpyrght"> &copy; (2013-<%= Time.now.year %>) NumBeers </div>
   </footer>
   
 </body>
