changed the happy hour notice

--- a/app/views/user_mailer/happy_hour.html.erb
+++ b/app/views/user_mailer/happy_hour.html.erb
@@ -1,5 +1,5 @@
 <p>
-  Just thought you should know that someone has decided it was 5 O'Clock somewhere and therefore has poured themselves a pint... Just saying, in case you wanted to join them.
+  When 3 people grab a beer within 10 minutes of each other, it's Happy Hour time! With that said... it may or may not be 5 O'Clock, so proceed with caution. But... you should definitely join them!
 <br/>
 <br/>
   <em>P.S. If you would like to stop receiving these emails, please update your subscription settings in your profile.</em>
