--- a/app/views/admin/transactions/_form.html.erb
+++ b/app/views/admin/transactions/_form.html.erb
@@ -11,6 +11,12 @@
       <%= f.collection_select(:contact_id, Contact.all, :id, :full_name) %>
     </div>
   </div>
+  <div class="control-group">
+    <%= f.label :billable, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box(:billable, {}) %>
+    </div>
+  </div>
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
