some styling changes

--- a/app/views/admin/contacts/index.html.erb
+++ b/app/views/admin/contacts/index.html.erb
@@ -22,7 +22,11 @@
   </thead>
   <tbody>
     <% @contacts.each do |contact| %>
+    <% if !contact.active %>
+      <tr class="inactive">
+    <% else %>
       <tr>
+    <% end %>
         <td><%= link_to contact.id, admin_contact_path(contact) %></td>
         <td><%= contact.numbeer_id %></td>
         <td><%= contact.first_name %></td>
