--- a/app/views/admin/records/_form.html.erb
+++ b/app/views/admin/records/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="control-group">
     <%= f.label :contact_id, :class => 'control-label' %>
     <div class="controls">
-      <%= f.collection_select(:contact_id, Contact.all, :id, :full_name) %>
+      <%= f.collection_select(:contact_id, Contact.where(active: true), :id, :full_name) %>
     </div>
   </div>
   <div class="control-group">
