changing to fee percetanage instead of flat rate

--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -15,7 +15,7 @@
         <% end %>
       </div>
       <div>
-        <p><em>NOTE: Payment can be made with Cash, or Online. There is a $1.00 Fee when paying Online.</em></p>
+        <p><em>NOTE: Payment can be made with Cash, or Online. There is a 3% Fee when paying Online.</em></p>
       </div>
 <% end %>
     </div>
