--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -7,7 +7,7 @@
         <%= form_tag charges_path do %>
           <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                   data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-                  data-description="<%= number_to_currency(@balance) %> + $1.00 Fee"
+                  data-description="<%= number_to_currency(@balance) %> + <%= number_to_currency(@fee) %> Fee"
                   data-amount="<%= @cc_amount %>"
                   data-email="<%= current_user.email %>"
                   data-label="Pay Online">
